--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                 </div>
                                 <div class="location">2016年09月-2017年06月</div>
                                 <div class="price">門市人員</div>
-                                <label for="card1" class="button return" aria-hidden="true">◀
+                                <label for="card1" class="button return" aria-hidden="true">❮
                                     <i class="fas fa-arrow-left"></i>
                                 </label>
                             </div>
@@ -486,7 +486,7 @@
                                 </div>
                                 <div class="location">2017年10月-2018年03月</div>
                                 <div class="price">電子商務專員</div>
-                                <label for="card2" class="button return" aria-hidden="true">▶
+                                <label for="card2" class="button return" aria-hidden="true">❮
                                     <i class="fas fa-arrow-left"></i>
                                 </label>
                             </div>
@@ -526,7 +526,7 @@
                                 </div>
                                 <div class="location">2018年04月-2018年12月</div>
                                 <div class="price">業務助理</div>
-                                <label for="card3" class="button return" aria-hidden="true">▶
+                                <label for="card3" class="button return" aria-hidden="true">❮
                                     <i class="fas fa-arrow-left"></i>
                                 </label>
                             </div>
@@ -566,7 +566,7 @@
                                 </div>
                                 <div class="location">2019年04月-2019年07月</div>
                                 <div class="price">業務專員</div>
-                                <label for="card4" class="button return" aria-hidden="true">▶
+                                <label for="card4" class="button return" aria-hidden="true">❮
                                     <i class="fas fa-arrow-left"></i>
                                 </label>
                             </div>
@@ -606,7 +606,7 @@
                                 </div>
                                 <div class="location">2020年02月-2020年05月</div>
                                 <div class="price">前端程式開發課程</div>
-                                <label for="card5" class="button return" aria-hidden="true">▶
+                                <label for="card5" class="button return" aria-hidden="true">❮
                                     <i class="fas fa-arrow-left"></i>
                                 </label>
                             </div>
