--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.compat.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/index.css">
@@ -81,9 +81,9 @@
 
         <section id="aboutme">
 
-            <div class="abme-title ">
-                <h1>About me</h1>
-            </div>
+            <!-- <div > -->
+            <h1 class="abme-title ">About me</h1>
+            <!-- </div> -->
             <div class="pallax"></div>
             <div class="container">
                 <div class="row ">
@@ -182,14 +182,14 @@
 
         <section id="Portfolio">
             <div id="Portfolio-all">
-                <div class="Portfolio-title">
-                    <h1>Portfolio</h1>
-                </div>
+                <!-- <div > -->
+                <h1 class="Portfolio-title">Portfolio</h1>
+                <!-- </div> -->
 
                 <div class="container ">
                     <!-- PS設計 -->
                     <div class="row">
-                        <div id="" class="col-12 col-lg-12">
+                        <div class="col-12 col-lg-12">
                             <div class="hug">
                                 <div class="pic ps-pic">
                                     <div class="mask">
@@ -203,7 +203,7 @@
                     </div>
                     <!-- AI設計 -->
                     <div class="row">
-                        <div id="" class="col-12 col-lg-12">
+                        <div class="col-12 col-lg-12">
                             <div class="hug margint_30">
                                 <div class="pic ai-pic">
                                     <div class="mask ">
@@ -216,7 +216,7 @@
                     </div>
                     <!-- 程式設計 -->
                     <div class="row">
-                        <div id="" class="col-12 col-lg-12">
+                        <div class="col-12 col-lg-12">
                             <div class="hug margint_30">
                                 <div class="pic html-pic">
                                     <div class="mask ">
@@ -409,8 +409,9 @@
             </section> -->
 
         <section id="workexperiece">
-            <div class="title ">
-               <h1>work experience</h1> </div>
+            <!-- <div > -->
+            <h1 class="title ">work experience</h1>
+            <!-- </div> -->
             <div class="wrapper">
                 <div class="card">
                     <input type="checkbox" id="card1" class="more" aria-hidden="true">
@@ -618,7 +619,9 @@
         </section>
 
         <section id="professionalskill">
-            <div class="title "> <h1>professional skill</h1> </div>
+            <!-- <div class="title ">  -->
+            <h1 class="title">professional skill</h1>
+            <!-- </div> -->
             <!-- <h1>
                 Be bold, make your choice.<br><br>
                 一切的選擇都在於你
@@ -678,7 +681,7 @@
 
             </div>
         </section>
-        </section>
+
         <!-- </section> -->
     </main>
     <footer>
@@ -719,22 +722,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
         integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.extensions.min.js"></script> -->
-<!-- 
-    <script>
-        // ---頁面視窗-fullpage--特效-----
-        new fullpage('.fullpage', {
-            navigation: true,
-            responsiveWidth: 700,
-            anchors: ['home', 'about-us', 'contact'],
-            parallax: true,
-            onLeave: function (origin, destination, direction) {
-                console.log("Leaving section" + origin.index);
-            },
-        });
 
-
-    </script> -->
     <script>
         // ------標題-關於我-特效-----------
         $(document).ready(function () {
