--- a/index.html
+++ b/index.html
@@ -609,8 +609,8 @@
                                 <div class="description">
                                     <p>經政府課程陪訓3個月中，不僅學習到以下軟體及程式操作，更多的是獨立解決問題及團隊合作及溝通重要性的能力。</p>
                                     <ul>
-                                        <li>設計軟體: Adobe Photoshop / Adobe Illustraor </li>
-                                        <li>程式軟體：HTML5 / CSS3 (SCSS) / JaveScript(jquery)</li>
+                                        <li>繪圖軟體: Adobe Photoshop / Adobe Illustraor / Xmind</li>
+                                        <li>程式軟體：HTML5 / CSS3 (SCSS) / JaveScript(jquery) / Bootstrap / Github</li>
 
 
                                     </ul>
@@ -645,16 +645,21 @@
                         <!-- <h4>程式語言</h4> -->
                         <p>HTML / <br>
                             CSS / <br>
-                            Javascript </p>
+                            Javascript <br>
+                            Bootstrap <br>
+                            Github
+                        </p>
                     </div>
                 </div>
                 <div class="tab-2">
-                    <label for="tab2-2">設計軟體</label>
+                    <label for="tab2-2">繪圖軟體</label>
                     <input id="tab2-2" name="tabs-two" type="radio">
                     <div>
                         <!-- <h4>Tab Two</h4> -->
                         <p>Adobe Photoship / <br>
-                            Adobe Illustrator</p>
+                            Adobe Illustrator / <br>
+                            Auto CAD
+                        </p>
                     </div>
                 </div>
                 <div class="tab-2">
