--- a/index.html
+++ b/index.html
@@ -772,6 +772,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </section>
         </section>
         <!-- <section id="workexperiece">
