--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div id="toggle" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    aria-expanded="false" aria-label="Toggle navigation" role="button">
                     <div class="one"></div>
                     <div class="two"></div>
                     <div class="three"></div>
