--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
                             <div class="modal-contentp">
                                 <span class="closep">&times;</span>
                                 <div class="hug">
-                                    <h4>
+                                    <span>
                                         基本資料
-                                    </h4>
+                                    </span>
                                     <p>姓名：邱鈺婷</p>
                                     <p>生日：84年08月12日</p>
                                     <!-- <p>手機：0928-543905</p> -->
 
                                     <p>郵件：qwe123750000@gmail.com</p>
                                     <br>
-                                    <h4>
+                                    <span>
                                         教育程度
-                                    </h4>
+                                    </span>
                                     <p>僑光科技大學 行銷與流通管理系 2012/9 - 2016/6</p>
                                 </div>
                             </div>
@@ -398,7 +398,7 @@
 
         <section id="professionalskill">
             <!-- <div class="title ">  -->
-            <h1 class="professionalskill-title">professional skill</h1>
+            <h2 class="professionalskill-title">professional skill</h2>
             <!-- </div> -->
 
             <div class="blog-card">
@@ -580,7 +580,7 @@
         <section id="Portfolio">
             <div id="Portfolio-all">
                 <!-- <div > -->
-                <h1 class="Portfolio-title porfolio_pic">Portfolio</h1>
+                <h2 class="Portfolio-title porfolio_pic">Portfolio</h2>
                 <!-- </div> -->
 
                 <div class="container ">
