--- a/Portfolio-ps.html
+++ b/Portfolio-ps.html
@@ -32,26 +32,49 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
-                            <a class="nav-link" href="/index.html#aboutme">
+                            <a class="nav-link" href="#aboutme">
                                 <p>關於我</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="/index.html#workexperiece">
+                            <a class="nav-link " href="#workexperiece">
                                 <p>工作經驗</p>
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link " href="/index.html#professionalskill">
+                            <a class="nav-link " href="#professionalskill">
                                 <p>專業技能</p>
                             </a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link " href="/index.html#Portfolio">
-                                <p>作品集</p>
-                            </a>
+                        <li class="nav-item ">
+                            <div class="touch">
+                                <a class="nav-link " href="#Portfolio">
+                                    <p>作品集</p>
+                                </a>
+                                <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">menuItem</a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div> -->
+
+                                <ul class="here1"  aria-haspopup="true" aria-expanded="false">
+                                     <!-- active在視覺上設計底色不同,表示目前在這個位置,如果不需要則刪除  -->
+                                    <!-- <li > -->
+                                         <!-- 子選單的 div **********  -->
+                                        <a class="dropdown-item here" href="Portfolio-ps.html">
+                                            Photoshop
+                                        </a>
+                                        <a class="dropdown-item here" href="/Portfolio-ai.html">Illustraor</a>
+                                        <a class="dropdown-item here" href="Portfolio-web.html">web</a>
+
+
+
+                                    <!-- </li > -->
+                                </ul>
+                            </div>
                         </li>
 
 
@@ -61,75 +84,77 @@
                 </div>
             </nav>
         </aside>
+     
+
+    </header>
 
 
+    <section id="Portfolio-ps" class="">
 
-        <section id="Portfolio-ps" class="">
-
-            <div class="container-fluid">
-                <div class="row ">
-                    <h2>PS-Design</h2>
+        <div class="container-fluid">
+            <div class="row ">
+                <h2>PS-Design</h2>
+            </div>
+            <div class="row ">
+                <div class="pic pspic1 col-md-12 col-lg-6 delepad" data-aos="fade-right">
+                    <!-- <div class="pic pspic1 "></div> -->
+                    <!-- <img src="./img/PS-pic1.jpg" alt=""> -->
                 </div>
-                <div class="row ">
-                    <div class="pic pspic1 col-md-12 col-lg-6 delepad" data-aos="fade-right">
-                        <!-- <div class="pic pspic1 "></div> -->
-                        <!-- <img src="./img/PS-pic1.jpg" alt=""> -->
-                    </div>
-                    <div id="PS-text1" class="ps-text col-md-12 col-lg-5 offset-lg-1" data-aos="fade-up"
-                        data-aos-anchor-placement="top-center">
-                        <div class="line"> </div>
-                        <p>2020.2.7 <br><br>
-                            在場大雪的夜晚<br>
-                            這趟旅途的末班火車<br>
-                            乘載著女孩心中歸宿
-                        </p>
-
-                    </div>
-
-                </div>
-                <div class="row ">
-                    <div class="pic pspic2 col-md-12 col-lg-6 offset-lg-1 delepad" data-aos="fade-left">
-                        <!-- <div class="pic pspic2 "></div> -->
-                        <!-- <img src="./img/PS-pic2.jpg" alt=""> -->
-                    </div>
-                    <div id="PS-text2" class="ps-text col-md-12 col-lg-5" data-aos="fade-up"
-                        data-aos-anchor-placement="top-center">
-                        <div class="line"> </div>
-                        <p>2020.2.16 <br><br>
-                            一場夢境<br>
-                            置身於奇幻世界<br>
-                            前往的道路上，<br>
-                            會遇到什麼樣的故事
-                        </p>
-                    </div>
-
-                </div>
-
-                <div class="row ">
-                    <div class="pic pspic3 col-md-12 col-lg-6 delepad" data-aos="fade-right">
-                        <!-- <img src="./img/PS-pic3.jpg" alt=""> -->
-                    </div>
-                    <div id="PS-text3" class="ps-text col-md-12 col-lg-5 offset-lg-1" data-aos="fade-up"
-                        data-aos-anchor-placement="top-center">
-                        <div class="line"> </div>
-                        <p>2020.2.28 <br><br>
-                            B612星球上，<br>
-                            在每個夜晚，<br>
-                            有一位望向窗外，<br>
-                            等待著王子歸來的玫瑰
-                        </p>
-                    </div>
+                <div id="PS-text1" class="ps-text col-md-12 col-lg-5 offset-lg-1" data-aos="fade-up"
+                    data-aos-anchor-placement="top-center">
+                    <div class="line"> </div>
+                    <p>2020.2.7 <br><br>
+                        在場大雪的夜晚<br>
+                        這趟旅途的末班火車<br>
+                        乘載著女孩心中歸宿
+                    </p>
 
                 </div>
 
             </div>
+            <div class="row ">
+                <div class="pic pspic2 col-md-12 col-lg-6 offset-lg-1 delepad" data-aos="fade-left">
+                    <!-- <div class="pic pspic2 "></div> -->
+                    <!-- <img src="./img/PS-pic2.jpg" alt=""> -->
+                </div>
+                <div id="PS-text2" class="ps-text col-md-12 col-lg-5" data-aos="fade-up"
+                    data-aos-anchor-placement="top-center">
+                    <div class="line"> </div>
+                    <p>2020.2.16 <br><br>
+                        一場夢境<br>
+                        置身於奇幻世界<br>
+                        前往的道路上，<br>
+                        會遇到什麼樣的故事
+                    </p>
+                </div>
 
-        </section>
+            </div>
+
+            <div class="row ">
+                <div class="pic pspic3 col-md-12 col-lg-6 delepad" data-aos="fade-right">
+                    <!-- <img src="./img/PS-pic3.jpg" alt=""> -->
+                </div>
+                <div id="PS-text3" class="ps-text col-md-12 col-lg-5 offset-lg-1" data-aos="fade-up"
+                    data-aos-anchor-placement="top-center">
+                    <div class="line"> </div>
+                    <p>2020.2.28 <br><br>
+                        B612星球上，<br>
+                        在每個夜晚，<br>
+                        有一位望向窗外，<br>
+                        等待著王子歸來的玫瑰
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
 
 
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -142,11 +167,11 @@
     <script>
         AOS.init();
     </script>
-            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
         integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-        
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+
 
 </body>
 
