--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             }); 
     </script>
 
-    <!-- <script>
+    <script>
     // nav在第一頁不顯示
     
     $(document).ready(function () {
@@ -961,18 +961,18 @@
             var scroll = $(window).scrollTop();
             console.log(scroll);
 
-            if (scroll > 300) {
+            if (scroll > 580) {
                 $(".navbar").css("display", "block");
             }
 
 
             else {
 
-                $(".top").css("display", "none");
+                $(".navbar").css("display", "none");
             }
         })
     }) 
-</script> -->
+</script>
     <script>
         // top鍵在第一頁不顯示
 
