--- a/Portfolio-web.html
+++ b/Portfolio-web.html
@@ -31,25 +31,25 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item ">
-                            <a class="nav-link" href="#aboutme">
+                            <a class="nav-link" href="index.html#aboutme">
                                 <p>關於我</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#workexperiece">
+                            <a class="nav-link " href="index.html#workexperiece">
                                 <p>工作經驗</p>
                             </a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link " href="#professionalskill">
+                            <a class="nav-link " href="index.html#professionalskill">
                                 <p>專業技能</p>
                             </a>
                         </li>
 
                         <li class="nav-item ">
                             <div class="touch">
-                                <a class="nav-link " href="#Portfolio">
+                                <a class="nav-link " href="index.html#Portfolio">
                                     <p>作品集</p>
                                 </a>
                                 <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">menuItem</a>
