--- a/Portfolio-ps.html
+++ b/Portfolio-ps.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.0/animate.compat.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/Portfolio-ps.css">
-    <link rel="stylesheet" href="./style/layout.css">
+    <link rel="stylesheet" href="./style/layout-portfolio.css">
 
 
 </head>
