--- a/index.html
+++ b/index.html
@@ -64,14 +64,18 @@
                                      <!-- active在視覺上設計底色不同,表示目前在這個位置,如果不需要則刪除  -->
                                     <!-- <li > -->
                                          <!-- 子選單的 div **********  -->
+                                       <il>
                                         <a class="dropdown-item here" href="Portfolio-ps.html">
                                             Photoshop
                                         </a>
+                                       </il>
+                                       <li>
                                         <a class="dropdown-item here" href="/Portfolio-ai.html">Illustraor</a>
+                                       </li> 
+                                       <li>
                                         <a class="dropdown-item here" href="Portfolio-web.html">web</a>
-
-
-
+                                       </li>
+                                
                                     <!-- </li > -->
                                 </ul>
                             </div>
@@ -718,7 +722,7 @@
 
 
 
-            <!-- </section> -->
+            </section>
     </main>
     <footer>
 
